@@ -664,10 +664,6 @@ Other requests:
   labeled ftype that is switched to using the UI (command)
 • switch from autoconf to mirtoconf2
 • opening “foo\ bar/baz” opens “foo/ bar/baz” instead (DOSism?)
-• tab-completing “foo bar/baz” is completely broken (open works)
-  – ⚠ by design
-  – it begins to complete after the last space (i.e. “bar/*”)
-  – escaping is broken, see point above this one
 • asarch requests merging the .joe_state file code, although
   it must be disabled by default like mksh’s HISTFILE is:
   18:48⎜«asarch» That would be for a wish list then: to keep the
